# astron-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  PR.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml
core/agent/: config.env
core/agent/tests/: test_base_builder.py  test_workflow_agent.py
core/common/: .env.example
core/common/settings/: polaris.py
core/knowledge/: config.env
core/memory/database/: config.env  main.py  pyproject.toml
core/plugin/aitools/: main.py  pytest.ini
core/plugin/link/: .gitignore  (+4 more)
core/workflow/: Dockerfile  config.env  main.py  pyproject.toml
docker/astronAgent/: .env.example  docker-compose.yaml
docs/: CCLA.md  DEPLOYMENT_GUIDE_WITH_AUTH.md  DEPLOYMENT_GUIDE_WITH_AUTH_RPA.md  DEPLOYMENT_GUIDE_WITH_AUTH_RPA_zh.md  DEPLOYMENT_GUIDE_WITH_AUTH_zh.md  ICLA.md  README-zh.md
helm/astron-agent/: values.yaml
makefiles/: python.mk
workflow_trace/: README.md  __init__.py  main.py  pyproject.toml
workflow_trace/api/: __init__.py
workflow_trace/api/v1/: __init__.py  router.py  trace.py
workflow_trace/configs/: __init__.py  app_config.py
workflow_trace/domain/: __init__.py
workflow_trace/domain/entities/: __init__.py  response.py  trace.py
workflow_trace/extensions/: __init__.py
workflow_trace/extensions/middleware/: __init__.py
workflow_trace/extensions/middleware/search/: __init__.py  factory.py  manager.py
workflow_trace/repository/: __init__.py  trace_dao.py
workflow_trace/service/: __init__.py  trace_service.py
(+256 files in other folders)
