[project]
name = "workflow-trace"
version = "0.1.0"
description = "Workflow trace query service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.11.0",
    "requests==2.32.3",
    "uvicorn[standard]==0.30.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
